syntax = "proto3";

package franchise;

import "Protos/franchise_common.proto";


service FranchiseServiceService {
  rpc CreateFranchiseService(CreateFranchiseServiceRequest) returns (FranchiseServiceResponse);
  rpc DeleteFranchiseService(DeleteFranchiseServiceRequest) returns (FranchiseServiceResponse);
}

message CreateFranchiseServiceRequest 
{
	string franchise_provide_service_name = 1;
	string franchise_provide_service_description = 3;
	int32 franchise_id = 2;
}

message DeleteFranchiseServiceRequest
{
	int32 franchise_provide_service_id = 1;
}

message FranchiseServiceResponse
{
	string response = 1;
}

